get users of forum func
