# config/config.go
@@ -9,6 +9,7 @@ var PathProfile = BasePath + "/user/{nickname}/profile"
 var PathCreateForum = BasePath + "/forum/create"
 var PathForumInfo = BasePath + "/forum/{slug}/details"
 var PathCreateThread = BasePath + "/forum/{slug}/create"
+var PathGetForumUsers = BasePath + "/forum/{slug}/users"
 
 var Headers = map[string]string{
 	"Access-Control-Allow-Credentials": "true",
