# delivery/forumFuncs.go
@@ -5,6 +5,7 @@ import (
 	"encoding/json"
 	"log"
 	"net/http"
+	"strconv"
 	"strings"
 )
 
@@ -169,4 +170,61 @@ func (api *Handler) CreateThread(w http.ResponseWriter, r *http.Request) {
 	}
 	w.WriteHeader(201)
 	json.NewEncoder(w).Encode(&thread)
+}
+
+// GetForumUsers godoc
+// @Summary Gets forum users
+// @Description Gets forum users
+// @ID GetForumUsers
+// @Accept  json
+// @Produce  json
+// @Tags Forum
+// @Param slug path string true "slug of user"
+// @Param   limit   query     string  false  "limit"
+// @Param   since   query     string  false  "since"
+// @Param   desc    query     bool  false  "desc"
+// @Success 200 {object} model.Forum
+// @Failure 404 {object} model.Error "Not found - Requested entity is not found in database"
+// @Failure 500 {object} model.Error "Internal Server Error - Request is valid but operation failed at server side"
+// @Router /forum/{slug}/users [get]
+func (api *Handler) GetForumUsers(w http.ResponseWriter, r *http.Request) {
+	s := strings.Split(r.URL.Path, "/")
+	slug := s[len(s)-2]
+
+	since := r.URL.Query().Get("since")
+	limitS := r.URL.Query().Get("limit")
+	descS := r.URL.Query().Get("desc")
+	desc := false
+	if descS == "true" {
+		desc = true
+	}
+	limit, err := strconv.Atoi(limitS)
+	if err != nil {
+		log.Println("error: ", err)
+		limit = 1e9
+		//ReturnErrorJSON(w, model.ErrBadRequest400, 400)
+		//return
+	}
+
+	_, err = api.usecase.GetForumBySlug(slug)
+	if err == model.ErrNotFound404 {
+		log.Println(err)
+		ReturnErrorJSON(w, model.ErrNotFound404, 404)
+		return
+	}
+	if err != nil {
+		log.Println(err)
+		ReturnErrorJSON(w, model.ErrServerError500, 500)
+		return
+	}
+
+	users, err := api.usecase.GetForumUsers(slug, limit, since, desc)
+	if err != nil {
+		log.Println(err)
+		ReturnErrorJSON(w, model.ErrServerError500, 500)
+		return
+	}
+
+	w.WriteHeader(200)
+	json.NewEncoder(w).Encode(&users)
 }
